# algorand-protocol

./: .env  .env.example  .gitignore  CONTRACTS.md  README.md  package-lock.json  pyproject.toml  railpack.toml
agent/: agent.py  railpack.toml  requirements.txt
artifacts/contracts/: AttestationContract.approval.puya.map  AttestationContract.approval.teal  AttestationContract.arc56.json  CampaignContract.approval.puya.map  CampaignContract.approval.teal  CampaignContract.arc56.json  PaymasterContract.approval.puya.map  PaymasterContract.approval.teal  PaymasterContract.arc56.json  SettlementContract.approval.puya.map  SettlementContract.approval.teal  SettlementContract.arc56.json
contracts/: AttestationContract.approval.puya.map  AttestationContract.arc56.json  CampaignContract.approval.puya.map  CampaignContract.approval.teal  CampaignContract.arc56.json  PaymasterContract.approval.puya.map  PaymasterContract.approval.teal  PaymasterContract.arc56.json  SettlementContract.approval.puya.map  SettlementContract.arc56.json  attestation_contract.py  attestation_v2.py  campaign_contract.py  campaign_v2.py  paymaster_contract.py  paymaster_v2.py  settlement_contract.py  settlement_v2.py
contracts/artifacts/: AttestationContract.approval.puya.map  AttestationContract.approval.teal  CampaignContract.approval.puya.map  PaymasterContract.approval.puya.map  SettlementContract.approval.puya.map  SettlementContract.approval.teal
fe+be/algo/: package.json  pnpm-lock.yaml
scripts/: deploy.py  generate_clients.py
supabase/migrations/: 001_initial_schema.sql  (+1 more)
(+18 files in other folders)
